sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:12: error: value i is not a member of Unit
possible cause: maybe a semicolon is missing before `value i'?
	}  i -=i;
           ^